--- a/multimedia-front-end/package.json
+++ b/multimedia-front-end/package.json
@@ -23,6 +23,7 @@
     "sass-loader": "^7.2.0",
     "vue-cli-plugin-axios": "0.0.4",
     "vue-cli-plugin-element": "^1.0.1",
+    "vue-cropper": "^0.4.9",
     "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
