--- a/multimedia-front-end/package.json
+++ b/multimedia-front-end/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "element-ui": "^2.4.5",
+    "jquery": "^3.4.1",
     "js-md5": "^0.7.3",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
